--- a/Views/CourseDetails/Index.cshtml
+++ b/Views/CourseDetails/Index.cshtml
@@ -25,12 +25,12 @@
         {
             <div class="page-content">
                 <div class="row">
-                    <div class="col-md-12">
+                    <div class="col-md-12" style="max-height:500px;overflow-y:auto;border: 1px solid #0000002b; padding: 10px; ">
                         <h4 class="classic-title"><span>@dtcourses?.Rows[0]["CourseName"]</span></h4>
                         @Html.Raw(dtcourses.Rows[0]["courseDetails"])
                     </div>
                 </div>
-                @if (dtcourses?.Rows[0]["CourseName"].ToString() == "SeleniumC#")
+                @if (dtcourses?.Rows[0]["CourseName"].ToString() == "Selenium with C#")
                 {
                     <div class="hr1" style="margin-bottom:50px;"></div>
                     <div class="row">
