--- a/Views/IT/Index.cshtml
+++ b/Views/IT/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@using System.Data
 @{
-    ViewData["Title"] = "Clinetra - Software courses";
+    ViewData["Title"] = "Software courses";
     Layout = "~/Views/Shared/_Layout.cshtml";
     DataTable dtIT = ViewData["IT"] as DataTable;
 }
@@ -31,13 +31,17 @@
     }
 </style>
 
-<div class="page-title">
-    <div class="heading">
-        <div class="container">
-            <div class="row d-flex justify-content-center text-center">
-                <div class="col-lg-8">
-                    <h1>Software courses</h1>
-                </div>
+<div class="page-banner">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6">
+                <h2>IT courses</h2>
+            </div>
+            <div class="col-md-6">
+                <ul class="breadcrumbs">
+                    <li><a href="/Home">Home</a></li>
+                    <li>IT Courses</li>
+                </ul>
             </div>
         </div>
     </div>
@@ -48,69 +52,74 @@
         <div class="row g-4" id="ITContainer">
             @if (dtIT.Rows.Count >= 1)
             {
-                <div class="col-md-6">
-                    <div class="plan-card">
-                        <h5 class="text-center"><strong>Mono Pack</strong></h5>
-                        <div class="text-muted text-center">Choose any single course</div>
-                        <div class="mt-2 text-warning fw-bold text-center">Save up to ~5%</div><hr />
-                        <div class="d-flex justify-content-between align-items-center">
-                            <div class="fs-6 fw-bold mt-2">
-                                <span id="firstPrice" style="display:none;">@dtIT.Rows[0]["Price"].ToString().Replace(",", "")</span>
-                                ₹ <span id="monoPrice" style="text-decoration:line-through;">0</span>
-                                <span class="text-muted fs-6">/course</span>
+                <div class="row pricing-tables">
+                    <div class="col-md-6 col-sm-6">
+                        <div class="pricing-table">
+                            <div class="plan-name">
+                                <h3>Mono Pack</h3>
+                                <div class="text-muted">Choose any single course</div>
+                                <div class="mt-2 text-warning fw-bold">Save up to ~5%</div>
                             </div>
-                            <div class="mt-2">
-                                Pay only: <strong class="text-primary">₹ <span id="monoPayOnly" class="fs-4 fw-bold">0</span></strong>
+                            <div class="plan-price">
+                                <div class="price-value">₹ <span id="monoPrice" style="text-decoration:line-through;">0</span><span>.00</span> / course</div>
+                                <div>Pay only: <strong class="text-primary">₹ <span id="monoPayOnly" class="fs-4 fw-bold" style="font-size:large;">0</span></strong></div>
                             </div>
-                        </div>
-                        <ul class="mt-3 list-unstyled">
-                            @for (int i = 0; i < dtIT.Rows.Count; i++)
-                            {
-                                var row = dtIT.Rows[i];
-                                <li>
-                                    <input type="checkbox" class="form-check-input me-2 single-select" data-value="@row["CourseName"]" data-price="@row["Price"].ToString().Replace(",", "")" data-image="data:image/png;base64,@Convert.ToBase64String((byte[])row["image"])" style="border-color: black;width: 20px;height: 20px;" />
-                                    <a href="@Url.Action("Index", "CourseDetails", new { courseType = "IT", course = row["CourseName"] })">
-                                        <strong>@row["CourseName"]</strong>
-                                    </a>
-                                </li>
-                            }
-                        </ul>
-                        <span id="monoMsg" style="color:red;"></span>
-                        <button class="btn btn-plan" id="monoBuyNow" style="background-color:#008374;color:#fff;">Buy Now</button>
-                        <div id="single-image-preview" class="d-flex justify-content-center gap-2 flex-wrap mt-3"></div>
-                    </div>
-                </div>
-                <div class="col-md-6">
-                    <div class="plan-card ">
-                        <h5 class="text-center"><strong>Tri Pack</strong></h5>
-                        <div class="text-muted text-center">Choose any three courses</div>
-                        <div class="mt-2 text-warning fw-bold text-center">Save up to ~15%</div><hr />
-                        <div class="d-flex justify-content-between align-items-center">
-                            <div class="fs-6 fw-bold mt-2">
-                                ₹ <span id="TriPrice" style="text-decoration:line-through;">0</span>
-                                <span class="text-muted fs-6">/course</span>
+                            <div class="plan-list" style="text-align:left;">
+                                <ul>
+                                    @foreach (System.Data.DataRow row in dtIT.Rows)
+                                    {
+                                        <li>
+                                            <input type="checkbox" class="form-check-input me-2 single-select" data-value="@row["CourseName"]"
+                                                   data-price="@row["Price"]" data-image="data:image/png;base64,@Convert.ToBase64String((byte[])row["image"])" style="border-color: black; width: 20px; height: 20px;" />
+                                            <a href="@Url.Action("Index", "CourseDetails", new { courseType = "Medical_Device", course = row["CourseName"].ToString().Replace(" ","_") })">
+                                                <strong>@row["CourseName"]</strong>
+                                            </a>
+                                        </li>
+                                    }
+                                </ul>
                             </div>
-                            <div class="mt-2">
-                                Pay only: <strong class="text-primary">
-                                    ₹ <span id="TriPayOnly" class="fs-4 fw-bold">0</span>
-                                </strong>
+                            <div class="plan-signup">
+                                <span id="monoMsg" class="text-danger"></span>
+                                <a href="javascript:void(0);" id="monoBuyNow" class="btn-system btn-small"><b>Choose</b></a>
+                                <div id="single-image-preview" class="d-flex justify-content-center gap-2 flex-wrap mt-3"></div>
                             </div>
                         </div>
-                        <ul class="mt-3 list-unstyled">
-                            @for (int i = 0; i < dtIT.Rows.Count; i++)
-                            {
-                                var row = dtIT.Rows[i];
-                                <li>
-                                    <input type="checkbox" class="form-check-input me-2 tri-select" data-value="@row["CourseName"]" data-price="@row["Price"]" data-image="data:image/png;base64,@Convert.ToBase64String((byte[])row["image"])" style="border-color: black;width: 20px;height: 20px;" />
-                                    <a href="@Url.Action("Index", "CourseDetails", new { courseType = "IT", course = row["CourseName"] })">
-                                        <strong>@row["CourseName"]</strong>
-                                    </a>
-                                </li>
-                            }
-                        </ul><span id="TriMsg" style="color:red;"></span>
-                        <button id="TriBuyNow" class="btn btn-plan" style="background-color:#008374;color:#fff;">Buy Now</button>
-                        <div id="tri-image-preview" class="d-flex justify-content-center gap-2 flex-wrap mt-3"></div>
                     </div>
+
+                    <!-- Tri Pack -->
+                    <div class="col-md-6 col-sm-6">
+                        <div class="pricing-table highlight-plan">
+                            <div class="plan-name">
+                                <h3>Tri Pack <span class="badge badge-success ms-2">Best for you</span></h3>
+                                <div class="text-muted">Choose any three courses</div>
+                                <div class="mt-2 text-warning fw-bold">Save up to ~15%</div>
+                            </div>
+                            <div class="plan-price">
+                                <div class="price-value">₹ <span id="TriPrice" style="text-decoration:line-through;">0</span><span>.00</span> / course</div>
+                                <div>Pay only: <strong class="text-primary">₹ <span id="TriPayOnly" class="fs-4 fw-bold" style="font-size:large;">0</span></strong></div>
+                            </div>
+                            <div class="plan-list" style="text-align:left;">
+                                <ul>
+                                    @foreach (System.Data.DataRow row in dtIT.Rows)
+                                    {
+                                        <li>
+                                            <input type="checkbox" class="form-check-input me-2 tri-select" data-value="@row["CourseName"]" data-price="@row["Price"]"
+                                                   data-image="data:image/png;base64,@Convert.ToBase64String((byte[])row["image"])" style="border-color: black; width: 20px; height: 20px;" />
+                                            <a href="@Url.Action("Index", "CourseDetails", new { courseType = "Medical_Device", course = row["CourseName"].ToString().Replace(" ","_") })">
+                                                <b>@row["CourseName"]</b>
+                                            </a>
+                                        </li>
+                                    }
+                                </ul>
+                            </div>
+                            <div class="plan-signup">
+                                <span id="TriMsg" class="text-danger"></span>
+                                <a href="javascript:void(0);" id="TriBuyNow" class="btn-system btn-small border-btn"><b>Choose</b></a>
+                                <div id="tri-image-preview" class="d-flex justify-content-center gap-2 flex-wrap mt-3"></div>
+                            </div>
+                        </div>
+                    </div>
+
                 </div>
             }
             else
@@ -137,7 +146,7 @@
                 const img = $('<img />', {
                     src: imageSrc,
                     class: 'img-thumbnail',
-                    style: 'width: 80px; height: 80px; object-fit: cover;'
+                    style: 'width: 80px; height: 80px; object-fit: cover;margin:10px;'
                 });
                 $('#single-image-preview').append(img);
             });
