--- a/Views/Pharma/Index.cshtml
+++ b/Views/Pharma/Index.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Pharma";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-<div class="page-banner" style="background: url(images/slide-02-bg.jpg) center #f9f9f9;">
+<div class="page-banner">
     <div class="container">
         <div class="row">
             <div class="col-md-6">
