--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -53,21 +53,17 @@
                         <div class="col-md-6">
                             <ul class="contact-details">
                                 <li>
-                                    <a href="#"><i class="fa fa-map-marker"></i> House-54/A, London, UK</a>
+                                    <a href="#"><i class="fa fa-envelope-o"></i> info@Clinetrasolutions.com</a>
                                 </li>
                                 <li>
-                                    <a href="#"><i class="fa fa-envelope-o"></i> info@yourcompany.com</a>
-                                </li>
-                                <li>
-                                    <a href="#"><i class="fa fa-phone"></i> +12 345 678 000</a>
+                                    <a href="#"><i class="fa fa-phone"></i> +91-9542455667</a>
                                 </li>
                             </ul>
-                            <!-- End Contact Info -->
                         </div>
                         <div class="col-md-6">
                             <ul class="social-list">
                                 <li>
-                                    <a class="facebook itl-tooltip" data-placement="bottom" title="Facebook" href="#"><i class="fa fa-facebook"></i></a>
+                                    <a class="facebook itl-tooltip" data-placement="bottom" title="Facebook" href="https://www.facebook.com/profile.php?id=61572499923205"><i class="fa fa-facebook"></i></a>
                                 </li>
                                 <li>
                                     <a class="twitter itl-tooltip" data-placement="bottom" title="Twitter" href="#"><i class="fa fa-twitter"></i></a>
@@ -83,24 +79,24 @@
                     </div>
                 </div>
             </div>
-            
+
             <div class="navbar navbar-default navbar-top">
                 <div class="container">
                     <div class="navbar-header">
                         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                             <i class="fa fa-bars"></i>
                         </button>
-                        <a class="navbar-brand" href="/Home">Clinetra</a>
+                        <a class="navbar-brand" href="/Home"><img src="~/images/logo.png" style="width:190px;" /></a>
                     </div>
                     <div class="navbar-collapse collapse">
                         <!-- Stat Search -->
                         @* <div class="search-side">
-                            <a class="show-search"><i class="fa fa-search"></i></a>
-                            <div class="search-form">
-                                <form autocomplete="off" role="search" method="get" class="searchform" action="#">
-                                    <input type="text" value="" name="s" id="s" placeholder="Search the site...">
-                                </form>
-                            </div>
+                        <a class="show-search"><i class="fa fa-search"></i></a>
+                        <div class="search-form">
+                        <form autocomplete="off" role="search" method="get" class="searchform" action="#">
+                        <input type="text" value="" name="s" id="s" placeholder="Search the site...">
+                        </form>
+                        </div>
                         </div> *@
                         <!-- End Search -->
                         <!-- Start Navigation List -->
@@ -272,63 +268,33 @@
             </div>
 
         </header>
-        <!-- End Header -->
 
-            <main role="main" class="pb-3">
-                @RenderBody()
-            </main>
+        <main role="main" class="pb-3">
+            @RenderBody()
+        </main>
         <footer>
             <div class="container">
                 <div class="row footer-widgets">
                     <div class="col-md-3">
-                        <div class="footer-widget mail-subscribe-widget">
-                            <h4>Get in touch<span class="head-line"></span></h4>
-                            <p>Join our mailing list to stay up to date and get notices about our new releases!</p>
-                            <form class="subscribe">
-                                <input type="text" placeholder="mail@example.com">
-                                <input type="submit" class="btn-system" value="Send">
-                            </form>
-                        </div>
                         <div class="footer-widget social-widget">
                             <h4>Follow Us<span class="head-line"></span></h4>
                             <ul class="social-icons">
                                 <li>
-                                    <a class="facebook" href="#"><i class="fa fa-facebook"></i></a>
+                                    <a class="facebook itl-tooltip" data-placement="bottom" title="Facebook" href="https://www.facebook.com/profile.php?id=61572499923205"><i class="fa fa-facebook"></i></a>
                                 </li>
                                 <li>
-                                    <a class="twitter" href="#"><i class="fa fa-twitter"></i></a>
+                                    <a class="twitter itl-tooltip" data-placement="bottom" title="Twitter" href="#"><i class="fa fa-twitter"></i></a>
                                 </li>
                                 <li>
-                                    <a class="google" href="#"><i class="fa fa-google-plus"></i></a>
+                                    <a class="linkdin itl-tooltip" data-placement="bottom" title="Linkedin" href="#"><i class="fa fa-linkedin"></i></a>
                                 </li>
                                 <li>
-                                    <a class="dribbble" href="#"><i class="fa fa-dribbble"></i></a>
-                                </li>
-                                <li>
-                                    <a class="linkdin" href="#"><i class="fa fa-linkedin"></i></a>
-                                </li>
-                                <li>
-                                    <a class="flickr" href="#"><i class="fa fa-flickr"></i></a>
-                                </li>
-                                <li>
-                                    <a class="tumblr" href="#"><i class="fa fa-tumblr"></i></a>
-                                </li>
-                                <li>
-                                    <a class="instgram" href="#"><i class="fa fa-instagram"></i></a>
-                                </li>
-                                <li>
-                                    <a class="vimeo" href="#"><i class="fa fa-vimeo-square"></i></a>
-                                </li>
-                                <li>
-                                    <a class="skype" href="#"><i class="fa fa-skype"></i></a>
+                                    <a class="instgram itl-tooltip" data-placement="bottom" title="Instagram" href="#"><i class="fa fa-instagram"></i></a>
                                 </li>
                             </ul>
                         </div>
                     </div>
-                    <!-- .col-md-3 -->
-                    <!-- End Subscribe & Social Links Widget -->
-                    <!-- Start Twitter Widget -->
-                    <div class="col-md-3">
+                    <div class="col-md-4">
                         <div class="footer-widget twitter-widget">
                             <h4>Twitter Feed<span class="head-line"></span></h4>
                             <ul>
@@ -336,97 +302,24 @@
                                     <p><a href="#">GrayGrids </a> Lorem ipsum dolor et, consectetur adipiscing eli.</p>
                                     <span>28 February 2014</span>
                                 </li>
-                                <li>
-                                    <p><a href="#">GrayGrids </a> Lorem ipsum dolor et, consectetur adipiscing eli.An Fusce eleifend aliquet nis application.</p>
-                                    <span>26 February 2014</span>
-                                </li>
-                                <li>
-                                    <p><a href="#">GrayGrids </a> Lorem ipsum dolor et, consectetur adipiscing eli.</p>
-                                    <span>28 February 2014</span>
-                                </li>
                             </ul>
                         </div>
                     </div>
-                    <!-- .col-md-3 -->
-                    <!-- End Twitter Widget -->
-                    <!-- Start Flickr Widget -->
-                    <div class="col-md-3">
-                        <div class="footer-widget flickr-widget">
-                            <h4>Flicker Feed<span class="head-line"></span></h4>
-                            <ul class="flickr-list">
-                                <li>
-                                    <a href="images/flickr-01.jpg" class="lightbox">
-                                        <img alt="" src="images/flickr-01.jpg">
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="images/flickr-02.jpg" class="lightbox">
-                                        <img alt="" src="images/flickr-02.jpg">
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="images/flickr-03.jpg" class="lightbox">
-                                        <img alt="" src="images/flickr-03.jpg">
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="images/flickr-04.jpg" class="lightbox">
-                                        <img alt="" src="images/flickr-04.jpg">
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="images/flickr-05.jpg" class="lightbox">
-                                        <img alt="" src="images/flickr-05.jpg">
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="images/flickr-06.jpg" class="lightbox">
-                                        <img alt="" src="images/flickr-06.jpg">
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="images/flickr-07.jpg" class="lightbox">
-                                        <img alt="" src="images/flickr-07.jpg">
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="images/flickr-08.jpg" class="lightbox">
-                                        <img alt="" src="images/flickr-08.jpg">
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="images/flickr-09.jpg" class="lightbox">
-                                        <img alt="" src="images/flickr-09.jpg">
-                                    </a>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                    <!-- .col-md-3 -->
-                    <!-- End Flickr Widget -->
-                    <!-- Start Contact Widget -->
-                    <div class="col-md-3">
+                    <div class="col-md-5">
                         <div class="footer-widget contact-widget">
-                            <h4><img src="images/footer-margo.png" class="img-responsive" alt="Footer Logo" /></h4>
-                            <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident</p>
+                            <h4>Contact Us<span class="head-line"></span></h4>
                             <ul>
-                                <li><span>Phone Number:</span> +01 234 567 890</li>
-                                <li><span>Email:</span> company@company.com</li>
-                                <li><span>Website:</span> www.yourdomain.com</li>
+                                <li><span>Address:</span> Clinetra solutions, 3rd floor, Saptagiri complex, Pillar number-A743, Backside KPHB bus stop, Kphb Phase 1, Hyderabad, Telangana-500072</li>
+                                <li><span>Phone Number:</span> +91 9542455667</li>
+                                <li><span>Email:</span> info@Clinetrasolutions.com</li>
                             </ul>
                         </div>
                     </div>
-                    <!-- .col-md-3 -->
-                    <!-- End Contact Widget -->
-
-
                 </div>
-                <!-- .row -->
-                <!-- Start Copyright -->
                 <div class="copyright-section">
                     <div class="row">
                         <div class="col-md-6">
-                            <p>&copy; 2014 Clinetra - All Rights Reserved <a href="http://graygrids.com">GrayGrids</a> </p>
+                            <p>&copy; @DateTime.Now.Year Clinetra - All Rights Reserved</p>
                         </div>
                         <div class="col-md-6">
                             <ul class="footer-nav">
@@ -437,15 +330,21 @@
                         </div>
                     </div>
                 </div>
-                <!-- End Copyright -->
-
             </div>
         </footer>
-        <!-- End Footer -->
         <a href="#" class="back-to-top"><i class="fa fa-angle-up"></i></a>
-
     </div>
     <script type="text/javascript" src="js/script.js"></script>
+    <script>
+        window.addEventListener("scroll", function () {
+            const logo = document.querySelector(".navbar-brand");
+            if (logo) {
+                logo.style.paddingTop = "0";
+                logo.style.paddingBottom = "0";
+                logo.style.paddingLeft = "0";
+                logo.style.paddingRight = "0";
+            }
+        });</script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
