--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -64,7 +64,7 @@
         <!-- Carousel inner -->
         <div class="carousel-inner">
             <div class="item active">
-                <img class="img-responsive" src="images/slider/bg1.jpg" alt="slider">
+                <img class="img-responsive" src="images/slider/medi.png" alt="slider">
                 <div class="slider-content">
                     <div class="col-md-12 text-center">
                         <h2 class="animated2">
@@ -79,7 +79,7 @@
             </div>
             <!--/ Carousel item end -->
             <div class="item">
-                <img class="img-responsive" src="images/slider/bg2.jpg" alt="slider">
+                <img class="img-responsive" src="images/slider/pharma.png" alt="slider">
                 <div class="slider-content">
                     <div class="col-md-12 text-center">
                         <h2 class="animated4">
@@ -94,7 +94,7 @@
             </div>
             <!--/ Carousel item end -->
             <div class="item">
-                <img class="img-responsive" src="images/slider/bg3.jpg" alt="slider">
+                <img class="img-responsive" src="images/slider/IT.png" alt="slider">
                 <div class="slider-content">
                     <div class="col-md-12 text-center">
                         <h2 class="animated7 white">
