--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -67,11 +67,11 @@
                 <img class="img-responsive" src="images/slider/medi.png" alt="slider">
                 <div class="slider-content">
                     <div class="col-md-12 text-center">
-                        <h2 class="animated2">
-                            <span>Welcome to <strong>Clinetra</strong></span>
+                        <h2 class="animated2 white">
+                            <span style="background-color: #00000063;padding: 5px;">Welcome to <strong>Clinetra</strong></span>
                         </h2>
-                        <h3 class="animated3">
-                            <span>The ultimate aim of your career</span>
+                        <h3 class="animated3 white">
+                            <span style="background-color: #00000063;padding: 5px;">The ultimate aim of your career</span>
                         </h3>
                         <p class="animated4"><a href="#" class="slider btn btn-system btn-large">Check Now</a></p>
                     </div>
@@ -82,11 +82,11 @@
                 <img class="img-responsive" src="images/slider/pharma.png" alt="slider">
                 <div class="slider-content">
                     <div class="col-md-12 text-center">
-                        <h2 class="animated4">
-                            <span><strong>Clinetra</strong> for the highest</span>
+                        <h2 class="animated4 white">
+                            <span style="background-color: #00000063;padding: 5px;"><strong>Clinetra</strong> for the highest</span>
                         </h2>
-                        <h3 class="animated5">
-                            <span>The Key of your Success</span>
+                        <h3 class="animated5 white">
+                            <span style="background-color: #00000063;padding: 5px;">The Key of your Success</span>
                         </h3>
                         <p class="animated6"><a href="#" class="slider btn btn-system btn-large">Buy Now</a></p>
                     </div>
@@ -98,10 +98,10 @@
                 <div class="slider-content">
                     <div class="col-md-12 text-center">
                         <h2 class="animated7 white">
-                            <span>The way of <strong>Success</strong></span>
+                            <span style="background-color: #00000063;padding: 5px;">The way of <strong>Success</strong></span>
                         </h2>
                         <h3 class="animated8 white">
-                            <span>Why you are waiting</span>
+                            <span style="background-color: #00000063;padding: 5px;">Why you are waiting</span>
                         </h3>
                         <div class="">
                             <a class="animated4 slider btn btn-system btn-large btn-min-block" href="#">Get Now</a><a class="animated4 slider btn btn-default btn-min-block" href="#">Live Demo</a>
