changes on layout

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -111,7 +111,6 @@
                                     <li><a href="">Services</a></li>
                                     <li><a href="right-sidebar.html">Right Sidebar</a></li>
                                     <li><a href="left-sidebar.html">Left Sidebar</a></li>
-                                    <li><a href="404.html">404 Page</a></li>
                                 </ul>
                             </li>
                             <li>
@@ -148,33 +147,7 @@
                 <!-- Mobile Menu Start -->
                 <ul class="wpb-mobile-menu">
                     <li>
-                        <a class="active" href="index.html">Home</a>
-                        <ul class="dropdown">
-                            <li>
-                                <a href="index.html">Home Main Version</a>
-                            </li>
-                            <li>
-                                <a href="index-01.html">Home Version 1</a>
-                            </li>
-                            <li>
-                                <a href="index-02.html">Home Version 2</a>
-                            </li>
-                            <li>
-                                <a href="index-03.html">Home Version 3</a>
-                            </li>
-                            <li>
-                                <a class="active" href="index-04.html">Home Version 4</a>
-                            </li>
-                            <li>
-                                <a href="index-05.html">Home Version 5</a>
-                            </li>
-                            <li>
-                                <a href="index-06.html">Home Version 6</a>
-                            </li>
-                            <li>
-                                <a href="index-07.html">Home Version 7</a>
-                            </li>
-                        </ul>
+                        <a href="/Home">Home</a>
                     </li>
                     <li>
                         <a href="about.html">Pages</a>
@@ -275,7 +248,7 @@
         <footer>
             <div class="container">
                 <div class="row footer-widgets">
-                    <div class="col-md-3">
+                    <div class="col-md-2">
                         <div class="footer-widget social-widget">
                             <h4>Follow Us<span class="head-line"></span></h4>
                             <ul class="social-icons">
@@ -294,13 +267,18 @@
                             </ul>
                         </div>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-md-5">
                         <div class="footer-widget twitter-widget">
-                            <h4>Twitter Feed<span class="head-line"></span></h4>
+                            <h4>About Us<span class="head-line"></span></h4>
                             <ul>
                                 <li>
-                                    <p><a href="#">GrayGrids </a> Lorem ipsum dolor et, consectetur adipiscing eli.</p>
-                                    <span>28 February 2014</span>
+                                    <p>
+                                        <a href="/Home">Clinetra Solutions</a> offers real-time training across Pharma, Medical Device, and
+                                        IT sectors, focusing on safety, compliance, research, and technical skills. The
+                                        programs prepare professionals for industry roles in drug/device monitoring,
+                                        regulatory affairs, cybersecurity, software development, and automation
+                                        testing.
+                                    </p>
                                 </li>
                             </ul>
                         </div>
