--- a/wwwroot/css/colors/sky-blue.css
+++ b/wwwroot/css/colors/sky-blue.css
@@ -105,7 +105,7 @@ ul.breadcrumbs li a:hover {
 }
 
 .panel-title a:hover {
-	color: #38cbcb;
+	color: #fff;
 }
 
 .milestone-block .milestone-icon {
